# pixfetch

./: .gitignore  Cargo.toml  README.md  build.rs  flake.nix
.github/ISSUE_TEMPLATE/: additional-system-info-request.md  distro-logo-request.md  new-info-type-request.md
.github/PULL_REQUEST_TEMPLATE/: distro-logo-addition.md
.github/workflows/: build.yml
src/: cache.rs  cli.rs  config.rs  default_config.toml  distro.rs  error.rs  info.rs  main.rs
xtask/: Cargo.toml
xtask/src/: main.rs  package.rs
