[package]
name = "pixfetch"
version = "0.1.0"
edition = "2021"
authors = ["RubixDev"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ansipix = "1.0.0"
battery = "0.7.8"
chrono = "0.4.19"
clap = { version = "~3.1", features = ["derive", "wrap_help"] }
serde = { version = "1.0.137", features = ["derive"] }
strum = { version = "0.24.1", features = ["derive"] }
sysinfo = "0.24.3"
systemstat = "0.1.11"
toml = "0.5.9"

[build-dependencies]
clap = { version = "~3.1", features = ["derive"] }
clap_complete = "~3.1"
clap_mangen = "0.1"
serde = { version = "1.0.137", features = ["derive"] }
strum = { version = "0.24.1", features = ["derive"] }
